# Code-Review

./: README.md
Asm/: AdditionalFunctions.h  AsmCommands.cpp  AsmCommands.h  Assembler.cpp  Assembler.h  BinaryFstream.cpp  BinaryFstream.h  CMakeLists.txt  CodeCommands  CodeOfCommands.h  Directives  Exspression.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  main.cpp  structs.h
MacroAsm/: MASM.sln
MacroAsm/Lexer/: Lexer.cs
MacroAsm/MASM/: Command.cs  MASM.csproj  MacroAsm.cs  Program.cs  input  output  square  swap
VM/: AdditionalFunctions.h  ArithemiticFunc.h  BinaryFstream.cpp  BinaryFstream.h  CMakeLists.txt  CodeCommands  CodeOfCommands.h  Command.cpp  Command.h  Debugger.cpp  Debugger.h  main.cpp  processor.cpp  processor.h  structs.h
test/: Assembler  KeyWords  VM
test/inputAsmF/: inputAsm
test/inputMacroAsm/: inputMacro  square
